--- a/modules/engine-api/pom.xml
+++ b/modules/engine-api/pom.xml
@@ -39,6 +39,17 @@
             <artifactId>dirigible-repository-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-security</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
 
 </project>
