swagger support added /services/v3/swagger.json

--- a/modules/runtime-core/pom.xml
+++ b/modules/runtime-core/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>dirigible-core-scheduler</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
+    	
+    	<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-rs-service-description-swagger</artifactId>
+		    <version>${cxf.version}</version>
+		</dependency>
     </dependencies>
 
 </project>
