--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -270,6 +270,11 @@
 		 	<artifactId>dirigible-content-api-http</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-content-api-utils</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Content - IDE -->
 		<dependency>
