--- a/modules/database-squle/pom.xml
+++ b/modules/database-squle/pom.xml
@@ -34,11 +34,11 @@
 			<artifactId>dirigible-commons-api</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
-    	<dependency>
+    	<!-- <dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-database-api</artifactId>
 			<version>${dirigible.version}</version>
-    	</dependency>
+    	</dependency> -->
     </dependencies>
 
 </project>
