--- a/modules/runtime-databases/pom.xml
+++ b/modules/runtime-databases/pom.xml
@@ -55,8 +55,11 @@
             <version>${dirigible.version}</version>
         </dependency>
 		
-		
-		        
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-rs-service-description-swagger</artifactId>
+		    <version>${cxf.version}</version>
+		</dependency>		        
     </dependencies>
 
 </project>
