Adds "IDE - Swagger" Plug-in

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -44,6 +44,7 @@
 		<module>ide-terminal</module>
 		<module>ide-console</module>
 		<module>ide-editor-orion</module>
+		<module>ide-swagger</module>
 		<module>ide-workspace</module>
 	</modules>
 
