--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -299,6 +299,11 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-content-ide-swagger</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-content-ide-workspace</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
