--- a/modules/engine-api/pom.xml
+++ b/modules/engine-api/pom.xml
@@ -50,6 +50,19 @@
 		    <version>1.1</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>${dirigible.version}</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-derby</artifactId>
+			<version>${dirigible.version}</version>
+			<scope>test</scope>
+    	</dependency>
     </dependencies>
 
 </project>
