--- a/modules/engine-js-v8/pom.xml
+++ b/modules/engine-js-v8/pom.xml
@@ -74,6 +74,24 @@
 			<artifactId>j2v8_win32_x86</artifactId>
 			<version>${j2v8.version}</version>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>${dirigible.version}</version>
+    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-tests</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<properties>
