--- a/modules/engine-js-rhino/pom.xml
+++ b/modules/engine-js-rhino/pom.xml
@@ -66,6 +66,12 @@
             <version>${dirigible.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-tests</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
