--- a/modules/runtime-ide-workspaces/pom.xml
+++ b/modules/runtime-ide-workspaces/pom.xml
@@ -41,6 +41,16 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-workspace</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-runtime-core</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-runtime-repository</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
