--- a/modules/core-git/pom.xml
+++ b/modules/core-git/pom.xml
@@ -30,10 +30,28 @@
     
     <dependencies>
     	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+    	<dependency>
 		    <groupId>org.eclipse.jgit</groupId>
 		    <artifactId>org.eclipse.jgit</artifactId>
 		    <version>4.8.0.201706111038-r</version>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>${dirigible.version}</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
