--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,7 @@
 		<module>modules/core-git</module>
 		<module>modules/core-scheduler</module>
 		<module>modules/core-publisher</module>
+		<module>modules/core-workspace</module>
 
 		<module>modules/runtime-core</module>
 		<module>modules/runtime-repository</module>
