--- a/modules/core-git/pom.xml
+++ b/modules/core-git/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>dirigible-repository-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-workspace</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+         <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-publisher</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
     	<dependency>
 		    <groupId>org.eclipse.jgit</groupId>
 		    <artifactId>org.eclipse.jgit</artifactId>
@@ -43,6 +53,12 @@
 		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-test</artifactId>
+			<version>${dirigible.version}</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-derby</artifactId>
 			<version>${dirigible.version}</version>
 			<scope>test</scope>
     	</dependency>
