finalizing http request api

--- a/modules/api-tests/pom.xml
+++ b/modules/api-tests/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>dirigible-content-api-utils</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-content-api-auth</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
