--- a/pom.xml
+++ b/pom.xml
@@ -413,6 +413,7 @@
 		<module>modules/api-utils</module>
 		<module>modules/api-http</module>
 		<module>modules/api-auth</module>
+		<module>modules/api-db</module>
 		
 		<module>modules/api-tests</module>
 
