--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -76,6 +76,11 @@
 		<!-- API Facades -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-auth</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-core</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
@@ -87,6 +92,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-utils</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-db</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
@@ -283,6 +293,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-content-api-auth</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-content-api-db</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
