--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,12 @@
 		  <version>${jsr250-api.version}</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-rs-service-description-swagger</artifactId>
+		    <version>${cxf.version}</version>
+		</dependency>
+
 		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>com.squareup.okhttp</groupId>
