streams api added

--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>dirigible-api-db</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-io</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -106,6 +111,12 @@
             <artifactId>dirigible-api-javascript-db</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-io</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        
     </dependencies>
 
 </project>
