--- a/api/api-facades/pom.xml
+++ b/api/api-facades/pom.xml
@@ -21,6 +21,7 @@
 		<module>api-http</module>
 		<module>api-tests</module>
 		<module>api-utils</module>
+		<module>api-io</module>
 	</modules>
 
 </project>
