--- a/releng/war-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/war-all/src/main/webapp/WEB-INF/web.xml
@@ -61,6 +61,7 @@
 	        <url-pattern>/services/v3/nashorn/*</url-pattern>
 	        <url-pattern>/services/v3/rhino/*</url-pattern>
 	        <url-pattern>/services/v3/v8/*</url-pattern>
+	        <url-pattern>/services/v3/wiki/*</url-pattern>
 	    </web-resource-collection>
 	    <auth-constraint>
 	        <role-name>Everyone</role-name>
