extensions supportability improvements

--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>dirigible-engine-js</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-extensions</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
