--- a/api/api-facades/api-http/pom.xml
+++ b/api/api-facades/api-http/pom.xml
@@ -50,6 +50,11 @@
 		    <artifactId>httpmime</artifactId>
 		    <version>4.5.3</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
 
     </dependencies>
 
