Create file with space in the name returns http code 500 #54

--- a/modules/runtime-ide-workspaces/pom.xml
+++ b/modules/runtime-ide-workspaces/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>dirigible-runtime-repository</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-utils</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
