--- a/modules/runtime-repository/pom.xml
+++ b/modules/runtime-repository/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>dirigible-repository-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-utils</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
