--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -383,6 +383,11 @@
 		 	<artifactId>dirigible-resources-bootstrap</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-resources-goldenlayout</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 
 		<!-- External -->
 		<dependency>
