--- a/api/api-javascript/.gitignore
+++ b/api/api-javascript/.gitignore
@@ -2,9 +2,15 @@
 dist/
 .settings/
 target/
+derby/
+dirigible_local/
 
 # files
 .DS_Store
 .project
 .classpath
 *.bak
+*.class
+*.jar
+derby.log
+/bin/
