--- a/ide/ide-preview/.gitignore
+++ b/ide/ide-preview/.gitignore
@@ -1,2 +1,16 @@
-/target
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
 /bin/
