--- a/resources/resources-themes/.gitignore
+++ b/resources/resources-themes/.gitignore
@@ -1,4 +1,16 @@
-/target/
-/target/
-/target/
-/target/
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
+/bin/
